--- a/CodingSet2.ipynb
+++ b/CodingSet2.ipynb
@@ -1,11 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51073cfd-30ae-444b-a6b1-2b03294b189a",
+   "cell_type": "markdown",
+   "id": "d1324f65-7a23-4a64-9e85-f023685c67c2",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Coding Set 2\n",
     "# Kimberly Kelley\n",
@@ -39,6 +37,58 @@
     "print (result4)\n",
     "print (result5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "806a8dd1-82a9-4bc6-9880-49baf4b1443f",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter total square feet in a tract of land:  435600\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for /: 'str' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 11\u001b[0m\n\u001b[0;32m      8\u001b[0m sqft \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEnter total square feet in a tract of land: \u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m### Calculate acres\u001b[39;00m\n\u001b[1;32m---> 11\u001b[0m acres \u001b[38;5;241m=\u001b[39m sqft \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m43560\u001b[39m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m### Display the number of acres for the tract of land\u001b[39;00m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msqft\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m square feet equals \u001b[39m\u001b[38;5;132;01m{\u001b[39;00macres\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for /: 'str' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "## Programming Exercises\n",
+    "## Exercise 3 Land Calculation\n",
+    "##     One acre of land is = 43560 sq ft.  Write a program that asks the \n",
+    "##     user to enter the total sq ft in a tract of land and calculates the \n",
+    "##     number of acres in the tract.\n",
+    "\n",
+    "### Prompt user for total square feet of a tract of land\n",
+    "sqft = input('Enter total square feet in a tract of land: ')\n",
+    "\n",
+    "### Calculate acres\n",
+    "acres = sqft / 43560\n",
+    "\n",
+    "### Display the number of acres for the tract of land\n",
+    "print(f'{sqft} square feet equals {acres}.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c73c7685-551e-4756-8c36-0bd81ea28a52",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
