--- a/CodingSet2.ipynb
+++ b/CodingSet2.ipynb
@@ -1,9 +1,23 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "d1324f65-7a23-4a64-9e85-f023685c67c2",
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9c66a34d-0f49-47ae-b283-17a70708d220",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "4\n",
+      "2.0\n",
+      "6\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# Coding Set 2\n",
     "# Kimberly Kelley\n",
@@ -40,12 +54,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "806a8dd1-82a9-4bc6-9880-49baf4b1443f",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter total square feet in a tract of land:  435600\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "435600.0 square feet equals 10.0 acres.\n"
+     ]
+    }
+   ],
    "source": [
     "## Programming Exercises\n",
     "## Exercise 3 Land Calculation\n",
@@ -60,7 +89,34 @@
     "acres = sqft / 43560\n",
     "\n",
     "### Display the number of acres for the tract of land\n",
-    "print(f'{sqft} square feet equals {acres}.')"
+    "print(f'{sqft} square feet equals {acres} acres.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d60b130-5006-468b-91dc-f70980c1da81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Exercise 13 Planting Grapevines\n",
+    "##     Write a program that makes the calculation for the vineyard owner to\n",
+    "##     determine how many grapvines should be planted in each row\n",
+    "\n",
+    "## Prompt the user to enter the length of the row in feet\n",
+    "rowlen = float(input('Enter the length of the row in feet: '))\n",
+    "\n",
+    "## Prompt the user to enter amount of space used by the end post in feet\n",
+    "postspace = float(input('Enter the amount of space used by end-post assembly in feet: '))\n",
+    "\n",
+    "## Prompt the user to enter the amount of space between vines in feet\n",
+    "between = float(input('Enter the amount of space between the vines in feet: '))\n",
+    "\n",
+    "## Perform calculation to determine the number of vines that will fit in a row\n",
+    "vineperrow = rowlen - (2 * postspace) / between\n",
+    "\n",
+    "## Display the number of grapevines that will fit in a row\n",
+    "print(f'{vineperrow} vines will git in a row.')\n"
    ]
   },
   {
