CodingSet2 Final Commit
Final commit prior to submission to assignment discussion

--- a/CodingSet2.ipynb
+++ b/CodingSet2.ipynb
@@ -94,10 +94,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "9d60b130-5006-468b-91dc-f70980c1da81",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the length of the row in feet:  30\n",
+      "Enter the amount of space used by end-post assembly in feet:  3\n",
+      "Enter the amount of space between the vines in feet:  3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.0 vines will fit in a row.\n"
+     ]
+    }
+   ],
    "source": [
     "## Exercise 13 Planting Grapevines\n",
     "##     Write a program that makes the calculation for the vineyard owner to\n",
@@ -107,16 +124,18 @@
     "rowlen = float(input('Enter the length of the row in feet: '))\n",
     "\n",
     "## Prompt the user to enter amount of space used by the end post in feet\n",
-    "postspace = float(input('Enter the amount of space used by end-post assembly in feet: '))\n",
+    "post = float(input('Enter the amount of space used by end-post assembly in feet: '))\n",
     "\n",
     "## Prompt the user to enter the amount of space between vines in feet\n",
     "between = float(input('Enter the amount of space between the vines in feet: '))\n",
     "\n",
     "## Perform calculation to determine the number of vines that will fit in a row\n",
-    "vineperrow = rowlen - (2 * postspace) / between\n",
+    "result1 = 2 * post\n",
+    "result2 = rowlen - result1\n",
+    "vine = result2 / between\n",
     "\n",
     "## Display the number of grapevines that will fit in a row\n",
-    "print(f'{vineperrow} vines will git in a row.')\n"
+    "print(f'{vine} vines will fit in a row.')"
    ]
   },
   {
