--- a/Coding Set 5.ipynb
+++ b/Coding Set 5.ipynb
@@ -12,10 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "37020425-76e1-43c8-ae37-43c01e94f156",
+   "execution_count": 2,
+   "id": "61308041-5745-4b31-869b-10ca27cf3371",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 8) (289109473.py, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[2], line 8\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(f'The product of {arg} times 10 = {reslut}\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unterminated string literal (detected at line 8)\n"
+     ]
+    }
+   ],
    "source": [
     "### 1. Write a function named times_ten. The function should accept an argument and display the product of its argument multiplied times 10.\n",
     "\n",
@@ -24,11 +33,21 @@
     "## This is the code that will use a function to display the results of product * 10\n",
     "def times_10(arg):\n",
     "     result = arg * 10\n",
-    "     print(f'The product of {arg} times 10 = {reslut}\n",
+    "     print(f'The product of {arg} times 10 = {reslut})\n",
     "\n",
     "## This is the code to call our function and set the value of argument to 3\n",
-    "times_10(3)\n"
+    "times_10(3)\n",
+    "\n",
+    "###NOTE:  I missed the close pare"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82231962-f335-4ff4-8d65-492e5e6f5603",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
