CodingSet5 Final Commit

--- a/Coding Set 5.ipynb
+++ b/Coding Set 5.ipynb
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5b93942-e926-4135-aaec-be91009fcc0b",
+   "id": "cafeb30c-4b70-4dd6-8817-45a50ba5e7a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,8 +27,20 @@
     "    print(f'The product of {arg} times 10 = {result} ')\n",
     "\n",
     "## This is the code to call the function times_ten and  set the value of the argument to 3\n",
-    "time_ten(3)\n"
+    "times_ten(3)\n",
+    "\n",
+    "## Note:  First commit I missed the closing ) on my print statement\n",
+    "## Second commit I was confused as to what I entered as Markdown and what was Code so I retyped it all\n",
+    "## Third commit the code ran\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60416b35-9d05-43d6-85d1-ef5e51b04577",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
