--- a/Coding Set 5.ipynb
+++ b/Coding Set 5.ipynb
@@ -12,14 +12,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cafeb30c-4b70-4dd6-8817-45a50ba5e7a5",
+   "execution_count": 12,
+   "id": "03764a9d-8a22-4941-8f1e-babb302c98ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The product of 3 times 10 = 30 \n"
+     ]
+    }
+   ],
    "source": [
     "### 1. Write a function named times_ten.  The function should accept an argument and display the product of it.\n",
     "\n",
-    "### High Level Overview:\n",
+    "### High Level Overview: I created the function time_ten and then added the call to the function with the argument set to 3\n",
+    "### Def is the start of the function, it contains the calc for result and the print to display our results\n",
+    "### The last line of code is what will run our function and pass the value of 3 in the argument\n",
     "\n",
     "## This is the code that will use a function to get the result of arg * 10 and display the product\n",
     "def times_ten(arg):\n",
@@ -37,10 +47,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60416b35-9d05-43d6-85d1-ef5e51b04577",
+   "id": "cecfec8d-0cd4-4fc3-9461-ac49373b19b7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### 10. Write a function named get_first_name that asks the user to enter his or her first name, and returns it.\n",
+    "\n",
+    "### High Level Overview:  This program will\n",
+    "\n",
+    "## This is the code that will define the function get_first_name\n",
+    "def get_first_name():\n",
+    "\n",
+    "## Prompt user to enter their first name\n",
+    "     first = input('Please enter your first name: ')\n",
+    "\n",
+    "get_first_name\n",
+    "print(f'First name: {first}\n"
+   ]
   }
  ],
  "metadata": {
