CodingSet5 Final commit

--- a/Coding Set 5.ipynb
+++ b/Coding Set 5.ipynb
@@ -45,11 +45,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cecfec8d-0cd4-4fc3-9461-ac49373b19b7",
+   "cell_type": "markdown",
+   "id": "b24afad0-a38a-46e2-ba57-0dcbcb98e5f9",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### 10. Write a function named get_first_name that asks the user to enter his or her first name, and returns it.\n",
     "\n",
@@ -61,9 +59,21 @@
     "## Prompt user to enter their first name\n",
     "     first = input('Please enter your first name: ')\n",
     "\n",
-    "get_first_name\n",
-    "print(f'First name: {first}\n"
+    "## Return first to be used in our print statement\n",
+    "     return first\n",
+    "\n",
+    "Define first and call the function get_fir\n",
+    "first = get_first_name()\n",
+    "print(f'First name: {first}')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "edb1d09d-bf48-4290-83ca-10e903da3d70",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
