CodingSet5 Exercise 1 commit

--- a/Coding Set 5.ipynb
+++ b/Coding Set 5.ipynb
@@ -45,9 +45,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b24afad0-a38a-46e2-ba57-0dcbcb98e5f9",
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a0c355f1-6679-4baf-be1e-c384445bd717",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please enter your first name:  Kim\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First name: Kim\n"
+     ]
+    }
+   ],
    "source": [
     "### 10. Write a function named get_first_name that asks the user to enter his or her first name, and returns it.\n",
     "\n",
@@ -62,18 +79,45 @@
     "## Return first to be used in our print statement\n",
     "     return first\n",
     "\n",
-    "Define first and call the function get_fir\n",
+    "## Define first and call the function get_first_name\n",
     "first = get_first_name()\n",
+    "\n",
+    "## Print the first name entered by the user\n",
     "print(f'First name: {first}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb77183f-8550-42b3-b807-eebe8243d08e",
+   "metadata": {},
+   "source": [
+    "## Programming Exercises #1 #17 #18 "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edb1d09d-bf48-4290-83ca-10e903da3d70",
+   "id": "e7055673-dfb3-4f26-83b6-cde1c1252d7f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### 1. Kilometer Converter\n",
+    "### Write a program that asks the user to enter a distance in kilometers, then converts that distance to miles.\n",
+    "### The conversion is as follows:  Miles = Kilometers X 0.6214\n",
+    "\n",
+    "### High Level Overview:  This program will\n",
+    "\n",
+    "## Function to convert kilometers to miles\n",
+    "def convert_to_miles(km):\n",
+    "    miles = km * 0.6214\n",
+    "    return miles\n",
+    "\n",
+    "## Function to Prompt user for kilometers\n",
+    "def kilometers():\n",
+    "    km = int(input('Enter distance in kilometers: '))\n",
+    "    miles = convrt_to_mies(km)\n",
+    "    print(f'{km} kilometers = {miles} miles')\n"
+   ]
   }
  ],
  "metadata": {
