--- a/Coding Set 5.ipynb
+++ b/Coding Set 5.ipynb
@@ -96,16 +96,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e7055673-dfb3-4f26-83b6-cde1c1252d7f",
+   "execution_count": 27,
+   "id": "ff5b6990-7e85-4818-9f55-82c4dc62974f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter distance in kilometers:  75\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'convrt_to_miles' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 19\u001b[0m\n\u001b[0;32m     16\u001b[0m     miles \u001b[38;5;241m=\u001b[39m convrt_to_miles(km)\n\u001b[0;32m     17\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkm\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m kilometers = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmiles\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m miles\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m---> 19\u001b[0m kilometers()\n",
+      "Cell \u001b[1;32mIn[27], line 16\u001b[0m, in \u001b[0;36mkilometers\u001b[1;34m()\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mkilometers\u001b[39m():\n\u001b[0;32m     15\u001b[0m     km \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEnter distance in kilometers: \u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[1;32m---> 16\u001b[0m     miles \u001b[38;5;241m=\u001b[39m convrt_to_miles(km)\n\u001b[0;32m     17\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkm\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m kilometers = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmiles\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m miles\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'convrt_to_miles' is not defined"
+     ]
+    }
+   ],
    "source": [
     "### 1. Kilometer Converter\n",
     "### Write a program that asks the user to enter a distance in kilometers, then converts that distance to miles.\n",
     "### The conversion is as follows:  Miles = Kilometers X 0.6214\n",
     "\n",
     "### High Level Overview:  This program will\n",
+    "### Note: 1st run I forget to call my function kilometers\n",
     "\n",
     "## Function to convert kilometers to miles\n",
     "def convert_to_miles(km):\n",
@@ -115,9 +136,19 @@
     "## Function to Prompt user for kilometers\n",
     "def kilometers():\n",
     "    km = int(input('Enter distance in kilometers: '))\n",
-    "    miles = convrt_to_mies(km)\n",
-    "    print(f'{km} kilometers = {miles} miles')\n"
+    "    miles = convert_to_miles(km)\n",
+    "    print(f'{km} kilometers = {miles} miles')\n",
+    "\n",
+    "kilometers()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6eaeef2d-ff13-4871-80c6-396289052d4c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
