CodingSet5 Ex 3 Commit 1

--- a/Coding Set 5.ipynb
+++ b/Coding Set 5.ipynb
@@ -95,9 +95,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "5bf452d6-0e20-42af-bc1b-b7cbd265e7f9",
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "70d5e1da-6be7-4746-991e-c9f56c598b49",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter distance in kilometers:  75\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "75 kilometers = 46.605 miles\n"
+     ]
+    }
+   ],
    "source": [
     "### 1. Kilometer Converter\n",
     "### Write a program that asks the user to enter a distance in kilometers, then converts that distance to miles.\n",
@@ -118,14 +135,57 @@
     "    miles = convert_to_miles(km)\n",
     "    print(f'{km} kilometers = {miles} miles')\n",
     "\n",
-    "## call fu\n",
+    "## call function kilometers\n",
     "kilometers()\n"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "id": "49fe13ba-c788-4cf1-8f46-7e4d3ace702a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the replacement cost of the homes or buildings:  100000\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum insurance you should purchase is 80000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 3. How much Insurance\n",
+    "### Financial experts advise that property owners should insure their homes/buildings for 80% of cost to replace.\n",
+    "### Write a program that asks the user to enter the replacement cost of a building, then display the minimum\n",
+    "### amount of insurance he or she should buy for the property. \n",
+    "\n",
+    "### High Level Overview:  This program will\n",
+    "\n",
+    "\n",
+    "## Function to calculate minimum insurance\n",
+    "def calc_min_insurance(replacement):\n",
+    "    minimum = replacement * 0.8\n",
+    "    return minimum\n",
+    "\n",
+    "def get_cost():\n",
+    "    replacement = int(input('Enter the replacement cost of the homes or buildings: '))\n",
+    "    minimum = calc_min_insurance(replacement)\n",
+    "    print(f'Minimum insurance you should purchase is {minimum}')\n",
+    "\n",
+    "get_cost()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6eaeef2d-ff13-4871-80c6-396289052d4c",
+   "id": "f403c78b-24f4-4ad4-b26f-9043ccd2acf1",
    "metadata": {},
    "outputs": [],
    "source": []
