CodingSet5 Ex 3 Final Commit

--- a/Coding Set 5.ipynb
+++ b/Coding Set 5.ipynb
@@ -140,26 +140,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "49fe13ba-c788-4cf1-8f46-7e4d3ace702a",
+   "cell_type": "markdown",
+   "id": "46cecbe7-489b-467b-82d5-c9597a3c3c07",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter the replacement cost of the homes or buildings:  100000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Minimum insurance you should purchase is 80000.0\n"
-     ]
-    }
-   ],
    "source": [
     "### 3. How much Insurance\n",
     "### Financial experts advise that property owners should insure their homes/buildings for 80% of cost to replace.\n",
@@ -174,9 +157,11 @@
     "    minimum = replacement * 0.8\n",
     "    return minimum\n",
     "\n",
+    "## Prompt user for cost and call function to calculate minimum insurance\n",
     "def get_cost():\n",
     "    replacement = int(input('Enter the replacement cost of the homes or buildings: '))\n",
     "    minimum = calc_min_insurance(replacement)\n",
+    "##Pr\n",
     "    print(f'Minimum insurance you should purchase is {minimum}')\n",
     "\n",
     "get_cost()\n"
