--- a/Coding Set 5.ipynb
+++ b/Coding Set 5.ipynb
@@ -140,9 +140,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "46cecbe7-489b-467b-82d5-c9597a3c3c07",
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "997eb3a6-701c-4b03-8c28-bbf780601455",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the replacement cost of the homes or buildings:  100000\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum insurance you should purchase is 80000.0\n"
+     ]
+    }
+   ],
    "source": [
     "### 3. How much Insurance\n",
     "### Financial experts advise that property owners should insure their homes/buildings for 80% of cost to replace.\n",
@@ -161,19 +178,44 @@
     "def get_cost():\n",
     "    replacement = int(input('Enter the replacement cost of the homes or buildings: '))\n",
     "    minimum = calc_min_insurance(replacement)\n",
-    "##Pr\n",
+    "##Print message to user\n",
     "    print(f'Minimum insurance you should purchase is {minimum}')\n",
     "\n",
+    "## Call main function\n",
     "get_cost()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f403c78b-24f4-4ad4-b26f-9043ccd2acf1",
+   "id": "b7a11f17-262a-4a34-b7ac-fb4747f783af",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### 17. Prime Number\n",
+    "### Write a Boolean funtion name is_prime which takes an iteger as an argument and returns true if the argument is a \n",
+    "### prime number, otherwise return false.  Use a function to prompt the user to enter a number then display a message\n",
+    "### indicating if the number is prime\n",
+    "\n",
+    "### High Level Overview:  This program will\n",
+    "\n",
+    "def is_prime(numb):\n",
+    "    for i in range(2, num):\n",
+    "        if num % i == 0:\n",
+    "            return False\n",
+    "        return True\n",
+    "        if num == 1:\n",
+    "            return False\n",
+    "\n",
+    "def main():\n",
+    "    num = int(input('Enter a number: '))\n",
+    "    if is_primt(numb):\n",
+    "        print(f'{numb} is prime')\n",
+    "    else:\n",
+    "        print(f'({numb} is not prime')\n",
+    "\n",
+    "main()\n"
+   ]
   }
  ],
  "metadata": {
