--- a/Coding Set 5.ipynb
+++ b/Coding Set 5.ipynb
@@ -187,10 +187,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "b7a11f17-262a-4a34-b7ac-fb4747f783af",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a number:  7\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'is_primt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[45], line 23\u001b[0m\n\u001b[0;32m     20\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     21\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m(\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnumb\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is not prime\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m---> 23\u001b[0m main()\n",
+      "Cell \u001b[1;32mIn[45], line 18\u001b[0m, in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmain\u001b[39m():\n\u001b[0;32m     17\u001b[0m     num \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEnter a number: \u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[1;32m---> 18\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m is_primt(numb):\n\u001b[0;32m     19\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnumb\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is prime\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     20\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'is_primt' is not defined"
+     ]
+    }
+   ],
    "source": [
     "### 17. Prime Number\n",
     "### Write a Boolean funtion name is_prime which takes an iteger as an argument and returns true if the argument is a \n",
@@ -209,13 +229,21 @@
     "\n",
     "def main():\n",
     "    num = int(input('Enter a number: '))\n",
-    "    if is_primt(numb):\n",
+    "    if is_print(numb):\n",
     "        print(f'{numb} is prime')\n",
     "    else:\n",
-    "        print(f'({numb} is not prime')\n",
+    "        print(f'{numb} is not prime')\n",
     "\n",
     "main()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1949e03b-a893-4ff3-9cac-e9b4ed6e8236",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
