CodingSet5 Ex 17 Final

--- a/Coding Set 5.ipynb
+++ b/Coding Set 5.ipynb
@@ -186,39 +186,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "b7a11f17-262a-4a34-b7ac-fb4747f783af",
+   "cell_type": "markdown",
+   "id": "e7508571-85db-4a51-9367-2e6f164f223e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter a number:  7\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'is_print' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[47], line 23\u001b[0m\n\u001b[0;32m     20\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     21\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnumb\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is not prime\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m---> 23\u001b[0m main()\n",
-      "Cell \u001b[1;32mIn[47], line 18\u001b[0m, in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmain\u001b[39m():\n\u001b[0;32m     17\u001b[0m     num \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEnter a number: \u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[1;32m---> 18\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m is_print(numb):\n\u001b[0;32m     19\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnumb\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is prime\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     20\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'is_print' is not defined"
-     ]
-    }
-   ],
    "source": [
     "### 17. Prime Number\n",
     "### Write a Boolean funtion name is_prime which takes an iteger as an argument and returns true if the argument is a \n",
     "### prime number, otherwise return false.  Use a function to prompt the user to enter a number then display a message\n",
     "### indicating if the number is prime\n",
     "\n",
-    "### High Level Overview:  This program will\n",
+    "### High Level Overview:  This program will prompt user for a number and determine if it si prime or not prime\n",
     "\n",
+    "### Note:  I used the value 7 an it returned 7 is not prime\n",
+    "### I used the value 4 and it returned 4 is prime\n",
+    "\n",
+    "## This function will determine prime or not prime\n",
     "def is_prime(num):\n",
     "    for i in range(2, num):\n",
     "        if num % i == 0:\n",
@@ -227,6 +209,7 @@
     "        if num == 1:\n",
     "            return False\n",
     "\n",
+    "## This code will prompt the user, call the function is_prime, and display the results\n",
     "def main():\n",
     "    num = int(input('Enter a number: '))\n",
     "    if is_prime(num):\n",
@@ -234,6 +217,7 @@
     "    else:\n",
     "        print(f'{num} is not prime')\n",
     "\n",
+    "## This code will call main function\n",
     "main()\n"
    ]
   },
