CodingSet5 Ex 18 Commit

--- a/Coding Set 5.ipynb
+++ b/Coding Set 5.ipynb
@@ -186,9 +186,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e7508571-85db-4a51-9367-2e6f164f223e",
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "bc9b24ef-2828-4553-9a84-3e55813323b3",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a number:  7\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 is prime\n"
+     ]
+    }
+   ],
    "source": [
     "### 17. Prime Number\n",
     "### Write a Boolean funtion name is_prime which takes an iteger as an argument and returns true if the argument is a \n",
@@ -197,8 +214,8 @@
     "\n",
     "### High Level Overview:  This program will prompt user for a number and determine if it si prime or not prime\n",
     "\n",
-    "### Note:  I used the value 7 an it returned 7 is not prime\n",
-    "### I used the value 4 and it returned 4 is prime\n",
+    "### Note:  I used the value 7 an it returned 7 is prime\n",
+    "### I used the value 4 and it returned 4 is not prime\n",
     "\n",
     "## This function will determine prime or not prime\n",
     "def is_prime(num):\n",
@@ -224,10 +241,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1949e03b-a893-4ff3-9cac-e9b4ed6e8236",
+   "id": "8419b5bd-0147-4b3c-96f2-bc1aaf8ad75f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### 18. Prime Number List\n",
+    "\n",
+    "\n",
+    "\n",
+    "## This function will determine prime or not prime\n",
+    "def is_prime(num):\n",
+    "    if num <= 1:\n",
+    "       return False\n",
+    "    for i in range(2, num):\n",
+    "        if num % i == 0:\n",
+    "            return False\n",
+    "     return True\n",
+    "      \n",
+    "## This code will prompt the user, call the function is_prime, and display the results\n",
+    "def display_prime(start, end):\n",
+    "    for num in range(start, end + 1):\n",
+    "        if is_prime(num):\n",
+    "        print(f'{num} ')\n",
+    "    else:\n",
+    "        print(f'{num} is not prime')\n",
+    "\n",
+    "def main():\n",
+    "    start = 1\n",
+    "    end = 100\n",
+    "\n",
+    "## This code will call main function\n",
+    "main()"
+   ]
   }
  ],
  "metadata": {
