CodingSet5 Ex 18 Final

--- a/Coding Set 5.ipynb
+++ b/Coding Set 5.ipynb
@@ -239,15 +239,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8419b5bd-0147-4b3c-96f2-bc1aaf8ad75f",
+   "cell_type": "markdown",
+   "id": "27a29ac5-1e23-4b00-a9cf-679413ddcc34",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### 18. Prime Number List\n",
+    "### Using the is_prime function from 17, write a program that displays all of the prime number from 1 to 100.\n",
+    "### This program should have a loop that calls is_prime\n",
     "\n",
-    "\n",
+    "### High Level Overview:  This program will find all prime numbers brom 1 to 100 and display them in a list.\n",
     "\n",
     "## This function will determine prime or not prime\n",
     "def is_prime(num):\n",
@@ -256,23 +256,31 @@
     "    for i in range(2, num):\n",
     "        if num % i == 0:\n",
     "            return False\n",
-    "     return True\n",
+    "    return True\n",
     "      \n",
-    "## This code will prompt the user, call the function is_prime, and display the results\n",
+    "## This code will call the function is_prime, and display the results\n",
     "def display_prime(start, end):\n",
     "    for num in range(start, end + 1):\n",
     "        if is_prime(num):\n",
-    "        print(f'{num} ')\n",
-    "    else:\n",
-    "        print(f'{num} is not prime')\n",
+    "            print(num)\n",
     "\n",
+    "## This code will call the function display_prime 101 times, so it can print our prime number list\n",
     "def main():\n",
     "    start = 1\n",
     "    end = 100\n",
+    "    display_prime(start, end)\n",
     "\n",
     "## This code will call main function\n",
-    "main()"
+    "main()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf1eb098-1195-4174-869b-0d2ab0300780",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
