CodingSet5 Final Commit

--- a/Coding Set 5.ipynb
+++ b/Coding Set 5.ipynb
@@ -46,8 +46,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "a0c355f1-6679-4baf-be1e-c384445bd717",
+   "execution_count": 62,
+   "id": "d6e6a8b3-573c-4237-85ae-26a4b5a96b6b",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,8 @@
    "source": [
     "### 10. Write a function named get_first_name that asks the user to enter his or her first name, and returns it.\n",
     "\n",
-    "### High Level Overview:  This program will\n",
+    "### High Level Overview:  This program will use a function to prompt the user for their first name, call the function\n",
+    "### and display first name back to them\n",
     "\n",
     "## This is the code that will define the function get_first_name\n",
     "def get_first_name():\n",
@@ -141,8 +142,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "997eb3a6-701c-4b03-8c28-bbf780601455",
+   "execution_count": 64,
+   "id": "7041b75b-4112-43db-86e3-4040e5c8b546",
    "metadata": {},
    "outputs": [
     {
@@ -166,8 +167,9 @@
     "### Write a program that asks the user to enter the replacement cost of a building, then display the minimum\n",
     "### amount of insurance he or she should buy for the property. \n",
     "\n",
-    "### High Level Overview:  This program will\n",
-    "\n",
+    "### High Level Overview:  This program will use a function to prompt the user for a cost and call the funtion calc_min_insurance\n",
+    "### it will then calculate the minumum amount of insurance they should carry, and then it will print the message stating the amount\n",
+    "### of minimum insurance\n",
     "\n",
     "## Function to calculate minimum insurance\n",
     "def calc_min_insurance(replacement):\n",
@@ -239,9 +241,43 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "27a29ac5-1e23-4b00-a9cf-679413ddcc34",
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "1ce10bc9-71f6-46a3-a30e-a3a0af412a29",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n",
+      "31\n",
+      "37\n",
+      "41\n",
+      "43\n",
+      "47\n",
+      "53\n",
+      "59\n",
+      "61\n",
+      "67\n",
+      "71\n",
+      "73\n",
+      "79\n",
+      "83\n",
+      "89\n",
+      "97\n"
+     ]
+    }
+   ],
    "source": [
     "### 18. Prime Number List\n",
     "### Using the is_prime function from 17, write a program that displays all of the prime number from 1 to 100.\n",
